sign up layer added

--- a/pages/signUpPage.html
+++ b/pages/signUpPage.html
@@ -3,16 +3,26 @@
 
 <html lang="eng">
 
-<head><!--document meta data -->
-    <meta charset="UTF-8">
-    <title>E-Tech Sign Up</title>
-    <link rel="stylesheet" href="../css/signUp-style.css">
-    <link rel="icon" href="../assets/icons/icons8-add-user-male-90.png">
-    <base href="localhost">
-    <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no">
-    <meta name="theme-color" content="green">
-</head>
+    <head><!--document meta data -->
+        <meta charset="UTF-8">
+        <title>E-Tech Sign Up</title>
+        <link rel="stylesheet" href="../css/signUp-style.css">
+        <link rel="icon" href="../assets/icons/icons8-add-user-male-90.png">
+        <base href="localhost">
+        <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no">
+        <meta name="theme-color" content="green">
+    </head>
 
-<body>
-</body>
+    <body class="body-style">
+
+    <section class="signup">
+
+        <div class="row">
+            <div class="layer-style">
+
+            </div>
+        </div>
+    </section>
+
+    </body>
 </html>
