sign up page created

--- a/pages/signUpPage.html
+++ b/pages/signUpPage.html
@@ -19,6 +19,34 @@
 
         <div class="row">
             <div class="layer-style">
+                <img src="../assets/icons/icons8-user-64.png" class="head-icon">
+                <h1><b>Sign Up Now</b></h1>
+                <hr><br><br>
+                <input type="text" class="input-box" placeholder="   User Name"><br><br>
+                <input type="email" class="input-box" placeholder="   E mail"><br><br>
+                <input type="password" class="input-box" placeholder="   Password"><br><br>
+                <input type="password" class="input-box" placeholder="   Re-Enter Password">
+                <p1><span><input type="checkbox"> I Agree to the <a href="#">Terms and Conditions</a></span></p1><br><br>
+                <button type="button" class="btnSignUp">Sign Up</button><br><br>
+
+                <hr class="hr1">
+                <p class="or"> OR </p>
+                <hr class="hr2">
+                <br><br>
+
+                <p2>
+                    Sign Up With :
+                </p2>
+                <div class="icons">
+                    <ul id="icons">
+                        <a href="#"><li style="background-color: #3b5998"><img src="../assets/icons/icons8-facebook-96.png" width="35px" height="35px"></li></a>
+                        <a href="#"><li style="background-color: #f83000"><img src="../assets/icons/icons8-google-plus-100.png" width="35px" height="35px"></li></a>
+                        <a href="#"><li style="background-color: #007bb5"><img src="../assets/icons/icons8-linkedin-96.png" width="35px" height="35px"></li></a>
+                        <a href="#"><li style="background-color: #55acee"><img src="../assets/icons/icons8-twitter-90.png" width="35px" height="35px"></li></a>
+                    </ul>
+                </div><br>
+
+                <p3>Already Have an Account ? <a href="">Sign in</a></p3>
 
             </div>
         </div>
