login page created

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p><b>This is ETech-Computer Shop's website and to developer this page <br> I use the javaScript, HTML and CSS...</b></p>
             <a href="pages/signUpPage.html" class="hero-btn"><b> Sign Up Now </b></a><br>
             <br><h3>OR</h3><br>
-            <a href="" class="hero-btn"><b> Log In </b></a>
+            <a href="pages/LoginPage.html" class="hero-btn"><b> Log In </b></a>
         </div>
 
 
