--- a/pages/signUpPage.html
+++ b/pages/signUpPage.html
@@ -46,7 +46,7 @@
                     </ul>
                 </div><br>
 
-                <p3>Already Have an Account ? <a href="">Sign in</a></p3>
+                <p3>Already Have an Account ? <a href="../pages/LoginPage.html">Sign in</a></p3>
 
             </div>
         </div>
