signup page social media links added

--- a/pages/signUpPage.html
+++ b/pages/signUpPage.html
@@ -39,10 +39,10 @@
                 </p2>
                 <div class="icons">
                     <ul id="icons">
-                        <a href="#"><li style="background-color: #3b5998"><img src="../assets/icons/icons8-facebook-96.png" width="35px" height="35px"></li></a>
-                        <a href="#"><li style="background-color: #f83000"><img src="../assets/icons/icons8-google-plus-100.png" width="35px" height="35px"></li></a>
-                        <a href="#"><li style="background-color: #007bb5"><img src="../assets/icons/icons8-linkedin-96.png" width="35px" height="35px"></li></a>
-                        <a href="#"><li style="background-color: #55acee"><img src="../assets/icons/icons8-twitter-90.png" width="35px" height="35px"></li></a>
+                        <a href="https://www.facebook.com/"><li style="background-color: #3b5998"><img src="../assets/icons/icons8-facebook-96.png" width="35px" height="35px"></li></a>
+                        <a href="https://accounts.google.com/servicelogin"><li style="background-color: #f83000"><img src="../assets/icons/icons8-google-plus-100.png" width="35px" height="35px"></li></a>
+                        <a href="https://lk.linkedin.com/"><li style="background-color: #007bb5"><img src="../assets/icons/icons8-linkedin-96.png" width="35px" height="35px"></li></a>
+                        <a href="https://twitter.com/login"><li style="background-color: #55acee"><img src="../assets/icons/icons8-twitter-90.png" width="35px" height="35px"></li></a>
                     </ul>
                 </div><br>
 
