background video added and content updated

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
                 </ul>
             </div>
         </nav>
+        <video src="assets/head-background-video.mp4" loop muted autoplay class="back-vdo"></video>
         <div class="text-box">
-            <h1>Build Up Your Own PC</h1>
+            <h1 class="topic">Build Up Your PC From Here</h1>
             <p><b>This is ETech-Computer Shop's website and to developer this page <br> I use the javaScript, HTML and CSS...</b></p>
             <a href="pages/signUpPage.html" class="hero-btn"><b> Sign Up Now </b></a><br>
             <br><h3>OR</h3><br>
@@ -58,8 +59,8 @@
     <main>
         <section class="about">
             <div class="text-box">
-                <h1>About Us</h1>
-                    <p>Having built up a very solid and stable reputation for our quality products and services over the last two<br>
+                <h1 class="about-topic">About Us</h1>
+                    <p class="about-us">Having built up a very solid and stable reputation for our quality products and services over the last two<br>
                     decades, the Real Computer Shop is the perfect choice, as we offer unrivalled expertise for all your IT<br>
                     Solutions and we are proud to have assisted thousands of customers since opening our first store back in <br>
                     January 2015.</p>
@@ -138,8 +139,9 @@
                         improve upon the performance of what was already the best business laptop you can buy.
                     </p>
                 </div>
-
             </div>
+
+            <a href="pages/buildUpComputer.html" class="build"><b><u>Build Up</u></b></a>
         </section><br><br>
 
         <section class="branches">
