computersBuils page structure added"

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </div>
             </div>
 
-            <a href="pages/buildUpComputer.html" class="build"><b><u>Build Up</u></b></a>
+            <a href="pages/ComputersBuild.html" class="build"><b><u>Build Up</u></b></a>
         </section><br><br>
 
         <section class="branches">
