--- a/pages/ComputersBuild.html
+++ b/pages/ComputersBuild.html
@@ -1,16 +1,32 @@
-/*
-* @Created by: Abhishek Ashinsa
-* @Date: 29/07/2022
-* @Project: E-Tech Computers
-* */
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Build Up Your Computer</title>
 </head>
 <body>
+
+    <header>
+        <p class="hed-title">Build Your PC</p><br>
+        <article></article>
+    </header>
+
+    <main>
+
+        <section>
+            <aside></aside>
+        </section>
+
+
+        <section>
+
+        </section>
+
+
+        <section>
+
+        </section>
+    </main>
 
 </body>
 </html>
