combuters buils style sheet added and updated content

--- a/pages/ComputersBuild.html
+++ b/pages/ComputersBuild.html
@@ -3,25 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Build Up Your Computer</title>
+    <link rel="stylesheet" href="../css/computers-build.css">
+    <link rel="icon" href="../assets/icons/icons8-add-user-male-90.png">
+    <base href="localhost">
+    <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no">
+    <meta name="theme-color" content="green">
 </head>
-<body>
+<body class="body-s">
 
     <header>
-        <p class="hed-title">Build Your PC</p><br>
+        <div class="head-topic">
+            <p class="head-title">Build Your PC</p><br>
+        </div>
         <article></article>
-    </header>
+    </header><br>
 
     <main>
 
         <section>
-            <aside></aside>
+
+            <aside class="aside">
+                <div class="head-div">
+<!--                    <div class="nav-links" id="navLinks">-->
+<!--                        <ul id="menu">-->
+<!--                            <li><a href=""><b>HOME</b></a></li>-->
+<!--                            <li><a href=""><b>ABOUT</b></a></li>-->
+<!--                            <li><a href=""><b>COMPUTERS</b></a></li>-->
+<!--                            <li><a href=""><b>BLOG</b></a></li>-->
+<!--                            <li><a href=""><b>CONTACT</b></a></li>-->
+<!--                        </ul>-->
+                </div>
+                <p class="aside-head"><u>Select Your Fav Brand</u></p><br><br>
+                <div class="brand-div">
+                <input type="checkbox" id="asus">
+                <label class="brands" for="asus"> ASUS </label><br><br>
+
+                <input type="checkbox" id="msi">
+                <label class="brands" for="msi"> MSI </label><br><br>
+
+                <input type="checkbox" id="dell">
+                <label class="brands" for="dell"> DELL </label><br><br>
+
+                <input type="checkbox" id="mac">
+                <label class="brands" for="mac"> MAC </label><br><br>
+
+                <input type="checkbox" id="hp">
+                <label class="brands" for="hp"> HP </label><br><br>
+
+                <input type="checkbox" id="lenovo">
+                <label class="brands" for="lenovo"> LENOVO </label><br><br>
+
+                </div>
+            </aside>
         </section>
-
-
-        <section>
-
-        </section>
-
 
         <section>
 
